[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/main/puzzle/crumb-cluster.gd" type="Script" id=1]
[ext_resource path="res://assets/main/puzzle/crumbs.png" type="Texture2D" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="Gradient" id=2]
offsets = PackedFloat32Array( 0, 0.665217, 1 )
colors = PackedColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.735178, 0.768182 ), -0.985714, -0.985714, 0, 0, Vector2( 1, 0 ), -7.40866, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticleProcessMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 90.0
gravity = Vector3( 0, 2000, 0 )
initial_velocity_min = 180.0
initial_velocity_max = 360.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
angle = 360.0
angle_random = 1.0
scale_min = 0.5
scale_max = 1.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="CrumbCluster" type="Node2D"]
script = ExtResource( 1 )
lifetime = 0.3

[node name="Particles0" type="GPUParticles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 2
lifetime = 0.3
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 4 )

[node name="Particles1" type="GPUParticles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 2
lifetime = 0.3
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 4 )

[node name="Particles2" type="GPUParticles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 2
lifetime = 0.3
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
